Header Grid + Crousel

--- a/snippets/mega-menu-horizontal.liquid
+++ b/snippets/mega-menu-horizontal.liquid
@@ -138,6 +138,7 @@
         else
           assign use_carousel_fallback_until = '2xl'
         endif
+        assign use_carousel_fallback_until = 'md'
       endif
     endif
   %}
