--- a/snippets/product-info.liquid
+++ b/snippets/product-info.liquid
@@ -205,6 +205,7 @@
         </div>
 
       {%- when 'buy_buttons' -%}
+       <span class="stock_available"></span> 
         {%- assign main_form_exists = true -%}
 
         {%- if request.page_type != 'password' -%}
