--- a/snippets/buy-buttons.liquid
+++ b/snippets/buy-buttons.liquid
@@ -24,7 +24,7 @@ Supported variables
 
 {%- form 'product', product, is: 'product-form', id: form_id -%}
   <input type="hidden" {% if variant_picker_block != blank %}disabled{% endif %} name="id" value="{{ product.selected_or_first_available_variant.id }}">
-
+ <input id="pre_order" type="hidden" name="" value="">
   {%- assign button_disabled = false -%}
   {%- assign button_size = button_size | default: 'xl' -%}
 
