--- a/snippets/checkbox.liquid
+++ b/snippets/checkbox.liquid
@@ -22,8 +22,7 @@ Supported variables
 {%- endcomment -%}
 
 {%- capture id -%}checkbox-{{ section.id }}-{{ form }}-{{ context }}-{{ name | handle }}-{{ value | handle }}{%- endcapture -%}
-
-<div class="checkbox-container" {{ block.shopify_attributes }}>
+<div class="checkbox-container {% if currentIndex > 8 %}hidden{% endif %}" {{ block.shopify_attributes }}>
   {%- if switch -%}
     <input id="{{ id }}" class="switch" type="{{ type | default: 'checkbox' }}" role="switch" name="{{ name }}" value="{{ value | default: 1 }}" {% if form %}form="{{ form }}"{% endif %} {% if disabled %}disabled{% endif %} {% if required %}required{% endif %} {% if checked %}checked{% endif %}>
   {%- else -%}
