--- a/snippets/facets-vertical.liquid
+++ b/snippets/facets-vertical.liquid
@@ -15,11 +15,17 @@ Supported variables
 * show_filters: whether the filters are visible or not
 * update_on_change: if set to true the results will reload as soon as an option is changed
 {%- endcomment -%}
+<style>
+  .filters__more,.filters__less{
+    cursor: pointer;
+  }
+</style>
 
 {%- assign color_label_list = 'general.label.color' | t | replace: ', ', ',' | downcase | split: ',' -%}
 {%- capture context -%}{% if update_on_change %}sidebar{% else %}drawer{% endif %}{%- endcapture -%}
 {%- capture id_prefix -%}facets-{{ context }}-{{ section.id }}{%- endcapture -%}
 
+<list-facets-filter>
 <form id="facet-form" is="facet-form" section-id="{{ section.id }}" {% if update_on_change %}update-on-change{% endif %} method="GET" action="{{ request.path }}" class="facets-vertical">
   {%- comment -%}We always reset to the first page so that when criteria change, the page is restored to the first one{%- endcomment -%}
   <input type="hidden" name="page" value="">
@@ -107,6 +113,7 @@ Supported variables
                 <div class="checkbox-list">
                   {%- for filter_value in filter.values -%}
                     {%- assign disabled = false -%}
+                    
 
                     {%- if filter_value.count == 0 and filter_value.active == false -%}
                       {% if section.settings.show_empty_filter_values == false %}
@@ -116,9 +123,36 @@ Supported variables
                       {%- endif -%}
                     {%- endif -%}
 
-                    {%- capture label -%}{{ filter_value.label }} {% if section.settings.show_filter_values_count %}({{ filter_value.count }}){% endif %}{%- endcapture -%}
-                    {%- render 'checkbox', label: label, name: filter_value.param_name, value: filter_value.value, checked: filter_value.active, disabled: disabled, context: context -%}
+                    {%- capture label -%}
+                      {{ filter_value.label }}
+                      {%- if section.settings.show_filter_values_count -%}
+                        ({{- filter_value.count -}})
+                      {% endif %}
+                    {%- endcapture -%}
+
+                    {%- render 'checkbox',
+                      label: label,
+                      name: filter_value.param_name,
+                      value: filter_value.value,
+                      checked: filter_value.active,
+                      disabled: disabled,
+                      context: context,
+                      currentIndex: forloop.index
+                    -%}
                   {%- endfor -%}
+                  
+                  {% if filter.values.size > 8 %}
+                    <div class="filters__more">  
+                      Show More (+{{ filter.values.size | minus : 8 }})
+                    </div> 
+                    <div class="filters__less hidden">
+                      Show Less
+                    </div> 
+                  {% endif %}
+          
+                  {% comment %} <list-filter-button class="custom-filters__more">
+                    More
+                  </list-filter-button> {% endcomment %}
                 </div>
               {%- endif -%}
 
@@ -153,3 +187,4 @@ Supported variables
     </noscript>
   {%- endif -%}
 </form>
+</list-facets-filter>
