--- a/snippets/facets-vertical.liquid
+++ b/snippets/facets-vertical.liquid
@@ -110,7 +110,7 @@ Supported variables
                   {%- endfor -%}
                 </div>
               {%- else -%}
-                <div class="checkbox-list">
+                <div class="checkbox-list" style="max-height: 300px; overflow: scroll;margin-block: 10px;">
                   {%- for filter_value in filter.values -%}
                     {%- assign disabled = false -%}
                     
@@ -140,20 +140,15 @@ Supported variables
                       currentIndex: forloop.index
                     -%}
                   {%- endfor -%}
-                  
-                  {% if filter.values.size > 8 %}
-                    <div class="filters__more">  
-                      Show More (+{{ filter.values.size | minus : 8 }})
-                    </div> 
-                    <div class="filters__less hidden">
-                      Show Less
-                    </div> 
-                  {% endif %}
-          
-                  {% comment %} <list-filter-button class="custom-filters__more">
-                    More
-                  </list-filter-button> {% endcomment %}
                 </div>
+                {% if filter.values.size > 8 %}
+                  <div class="filters__more">  
+                    Show More (+{{ filter.values.size | minus : 8 }})
+                  </div> 
+                  <div class="filters__less hidden">
+                    Show Less
+                  </div> 
+                {% endif %}
               {%- endif -%}
 
             {%- when 'price_range' -%}
