Make only overflow-y as scroll

--- a/snippets/facets-vertical.liquid
+++ b/snippets/facets-vertical.liquid
@@ -110,7 +110,7 @@ Supported variables
                   {%- endfor -%}
                 </div>
               {%- else -%}
-                <div class="checkbox-list" style="max-height: 300px; overflow: scroll;margin-block: 10px;">
+                <div class="checkbox-list" style="max-height: 300px; overflow-y: scroll;margin-block: 10px;">
                   {%- for filter_value in filter.values -%}
                     {%- assign disabled = false -%}
                     
