--- a/assets/reach-out.css
+++ b/assets/reach-out.css
@@ -14,6 +14,9 @@
     align-items: center;
     justify-content: center;
 }
+#reach-out-section .reach-block-content-main:hover{
+    border-color:  #565656;
+}
 #reach-out-section .reach_heading h3{
     font-weight: 700;
     line-height: 1.3;
@@ -45,6 +48,13 @@
 @media(min-width:1150px) and (max-width:1260px){
     #reach-out-section .reach--out--main{
         width: 650px;
+    }
+}
+
+@media(min-width:1900px){
+    #reach-out-section.reach-section-bg{
+        max-width: 1800px;
+        margin: 0 auto;
     }
 }
 @media(max-width:1200px){
