--- a/assets/theme.css
+++ b/assets/theme.css
@@ -9921,6 +9921,18 @@ split-lines {
 .app-wrapper #store-contents .grid__item .grid-product__content .grid-product__title{
   line-height: 1.5;
 }
+.page-width #store-contents .grid__item .grid-product__content{
+  position: relative;
+}
+.page-width #store-contents .grid__item .grid-product__content .grid-product__tag{
+  position: absolute;
+  font-size: 13px;
+  right: 5%;
+  z-index: 2;
+  background-color: #fff;
+  padding: 7px 7px 7px 9px;
+  line-height: 1.2;
+}
 .app-wrapper #store-contents .grid__image-ratio--square:before {
   padding-bottom: 100%;
 }
