--- a/assets/theme.css
+++ b/assets/theme.css
@@ -9904,9 +9904,15 @@ split-lines {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-  
   .app-wrapper #store-contents .xs-store-collection .grid .grid__item{
     padding-left: 0;
+  }
+  cart-drawer [slot="footer"] form.buy-buttons--compact{
+    display: flex;
+    flex-direction: column;
+  }
+  cart-drawer [slot="footer"] form.buy-buttons--compact a, cart-drawer [slot="footer"] form.buy-buttons--compact button{
+    width: 100%;
   }
 }
 .app-wrapper #store-contents .grid__item .filter-group h4{
@@ -9958,7 +9964,6 @@ line-item .line-item__info .list-disc .text-subdued{
   width: 100%;
 }
 .app-wrapper #store-contents .grid__image-ratio{
-  /* background-image: attr(data-image url); */
   position: relative;
   background-repeat: no-repeat;
   background-size: contain;
@@ -9979,16 +9984,16 @@ line-item .line-item__info .list-disc .text-subdued{
     width: 100%;
   }
 }
-
 .xs-drawer .xs-v-selection select.form-control {
   -webkit-appearance: none;
   background-position: right 50%;
-    background-repeat: no-repeat;
-    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
-    padding: .5em;
-    padding-right: 1.5em;
-    background-size: 20px;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+  padding: .5em;
+  padding-right: 1.5em;
+  background-size: 20px;
 }
 .xs-drawer.open .xs-drawer-inner [data-close-drawer]{
   height: 20px;
 }
+
