--- a/assets/theme.css
+++ b/assets/theme.css
@@ -9880,6 +9880,7 @@ split-lines {
 /* App content css */
 .app-wrapper .page-width{
   padding: 0 40px;
+  margin: 0 auto;
 }
 .app-wrapper #store-contents{
   margin-bottom: 100px;
