--- a/assets/sections.js.liquid
+++ b/assets/sections.js.liquid
@@ -937,6 +937,7 @@ var ProductRecommendations = class extends HTMLElement {
     }
     this._isLoaded = true;
     const section = this.closest(".shopify-section"), intent = this.getAttribute("intent") || "related", url = `${Shopify.routes.root}recommendations/products?product_id=${this.getAttribute("product")}&limit=${this.getAttribute("limit") || 4}&section_id=${section.id.replace("shopify-section-", "")}&intent=${intent}`, response = await fetch(url, { priority: "low" });
+    // console.log('url', section);
     const tempDiv = new DOMParser().parseFromString(await response.text(), "text/html"), productRecommendationsElement = tempDiv.querySelector("product-recommendations");
     if (productRecommendationsElement.childElementCount > 0) {
       this.replaceChildren(...document.importNode(productRecommendationsElement, true).childNodes);
