--- a/assets/theme.css
+++ b/assets/theme.css
@@ -9943,6 +9943,21 @@ split-lines {
 }
 .app-wrapper #store-contents .grid__item .filter-group .scroll-content li .collection-name{
   text-transform: capitalize;
+  opacity: 0.7;
+}
+.filter-group ul li a:before{
+  appearance: none;
+  background: rgb(var(--text-color) / .15) var(--checkmark-svg-url) no-repeat center;
+  background-size: 0;
+  border-radius: 2px;
+  flex-shrink: 0;
+  transition: background-color .2s ease-in-out;
+  position: relative;
+  top: 0.1875rem;
+  box-shadow: inset 1px 1px 2px #0000001a;
+  width: 16px !important;
+  height: 16px !important;
+  border: 0 !important;
 }
 
 .grid__item {
